--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "underscore": "~1.8.3",
     "backbone": "~1.2.0",
     "backbone.localstorage": "~1.1.16",
-    "express": "~4.12.4"
+    "express": "~4.12.4",
+    "express3-handlebars": "~0.5.2"
   }
 }
